2011-11-10  Kaz Kylheku  <kaz@kylheku.com>

	Task #11583

	More generic approach.

	* match.c (h_bind): Function removed.
	(hv_trampoline): New function.
	(dir_tables_init): hv_trampoline installed in
	h_directive_table instead of h_bind.

2011-11-10  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l: Fixed wrong error message.

2011-11-10  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_fun): Bugfix: if there is material after
	the function call, decline it; it is a horizontal context.

	* txr.1: Discussion and examples of calls that are
	in a horizontal context.

2011-11-09  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documented horizontal function definitions and calls

2011-11-09  Kaz Kylheku  <kaz@kylheku.com>

	Task #11583

	@(bind) in horizontal mode.

	* match.c (mf_from_ml, h_bind): New functions.
	(dir_tables_init): h_bind entered into table.

2011-11-09  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (h_fun, v_fun): Slightly more informative tracing from failed
	function calls.

2011-11-09  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Missing coll keyword added.

2011-11-08  Kaz Kylheku  <kaz@kylheku.com>

	Task #11431. First cut at horizontal match functions.

	* match.c (h_fun): New function.
	(match_line): Rearranged not to do hash lookup if the directive is a
	regex or list.  If hash lookup fails, try it as a horizontal function.
	(h_define): New function. Handles horizontal function syntax embedded
	in line.
	(v_define): Handle the horizontal function syntax occuring
	on a line by itself.  The function info is now stored as a cons cell
	whose car is the vertical function and cdr the horizontal one.
	(v_fun): Adjust to new function storage convention.
	(dir_tables_init): h_define entered in table.
	* parser.y: Added syntax for horizontal define.

2011-11-06  Kaz Kylheku  <kaz@kylheku.com>

	* txr.vim: Make sure whitespace is recognized after @.

2011-11-06  Kaz Kylheku  <kaz@kylheku.com>

	Task #11581 & bugfix.

	* match.c (noval_s): New symbol variable.