@@ -3172,7 +3172,14 @@ static void dir_tables_init(void)
   sethash(h_directive_table, var_s, cptr((mem_t *) h_var));
   sethash(h_directive_table, skip_s, cptr((mem_t *) h_skip));
   sethash(h_directive_table, coll_s, cptr((mem_t *) h_coll));
+  sethash(h_directive_table, flatten_s, cptr((mem_t *) hv_trampoline));
+  sethash(h_directive_table, forget_s, cptr((mem_t *) hv_trampoline));
+  sethash(h_directive_table, local_s, cptr((mem_t *) hv_trampoline));
+  sethash(h_directive_table, merge_s, cptr((mem_t *) hv_trampoline));
   sethash(h_directive_table, bind_s, cptr((mem_t *) hv_trampoline));
+  sethash(h_directive_table, set_s, cptr((mem_t *) hv_trampoline));
+  sethash(h_directive_table, cat_s, cptr((mem_t *) hv_trampoline));
+  sethash(h_directive_table, filter_s, cptr((mem_t *) hv_trampoline));
   sethash(h_directive_table, some_s, cptr((mem_t *) h_parallel));
   sethash(h_directive_table, all_s, cptr((mem_t *) h_parallel));
   sethash(h_directive_table, none_s, cptr((mem_t *) h_parallel));
